[#3196] Fixed button spacing in reports tab

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -3699,7 +3699,7 @@ main.results-page {
                 text-align: center;
                 button {
                     &:nth-of-type(2) {
-                        margin-left: 15px;
+                        margin-left: 15px !important;
                         }
                     &.reportDown {
                         margin: 15px auto 0;
